force-app/main/default/objects/FinanzierungsanfrageApartment__c/FinanzierungsanfrageApartment__c.object-meta.xml
<CustomObject>
    <label>Finanzierungsanfrage Apartment</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Finanzierungsanfrage Apartments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finanzierungsanfrage Apartments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>