force-app/main/default/objects/FinanzierungsanfrageApartment__c/fields/Apartment__c.field-meta.xml
<CustomField>
    <fullName>Apartment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apartment</label>
    <referenceTo>Appartment__c</referenceTo>
    <relationshipLabel>Finanzierungsanfrage Apartments</relationshipLabel>
    <relationshipName>FinanzierungsanfrageApartments</relationshipName>
    <type>Lookup</type>
</CustomField>