force-app/main/default/objects/FinanzierungsanfrageApartment__c/fields/ApartmentStatus__c.field-meta.xml
<CustomField>
    <fullName>ApartmentStatus__c</fullName>
    <formula>TEXT(Apartment__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apartment Status</label>
    <type>Text</type>
</CustomField>