force-app/main/default/objects/FinanzierungsanfrageApartment__c/fields/ErbbauzinsProMonatInEuro__c.field-meta.xml
<CustomField>
    <fullName>ErbbauzinsProMonatInEuro__c</fullName>
    <label>Erbbauzins pro Monat in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>