force-app/main/default/objects/FinanzierungsanfrageApartment__c/fields/Finanzierungsanfrage__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungsanfrage__c</fullName>
    <label>Finanzierungsanfrage</label>
    <referenceTo>Finanzierungsanfrage__c</referenceTo>
    <relationshipLabel>Finanzierungsanfrage Apartments</relationshipLabel>
    <relationshipName>FinanzierungsanfrageApartments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>