force-app/main/default/objects/FinanzierungsanfrageApartment__c/fields/FlaecheInQm__c.field-meta.xml
<CustomField>
    <fullName>FlaecheInQm__c</fullName>
    <label>Fläche in qm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>