force-app/main/default/objects/FinanzierungsanfrageApartment__c/fields/Immobilie__c.field-meta.xml
<CustomField>
    <fullName>Immobilie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Immobilie</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Finanzierungsanfrage Apartments</relationshipLabel>
    <relationshipName>FinanzierungsanfrageApartments</relationshipName>
    <type>Lookup</type>
</CustomField>