force-app/main/default/objects/FinanzierungsanfrageApartment__c/fields/InstandhaltungProMonatInEuro__c.field-meta.xml
<CustomField>
    <fullName>InstandhaltungProMonatInEuro__c</fullName>
    <label>Instandhaltung pro Monat in Eur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>