force-app/main/default/objects/FinanzierungsanfrageApartment__c/fields/NotarUndGerichtskostenInPercent__c.field-meta.xml
<CustomField>
    <fullName>NotarUndGerichtskostenInPercent__c</fullName>
    <label>Notar- und Gerichtskosten in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>