force-app/main/default/objects/FinanzierungsanfrageApartment__c/fields/VerwaltungProMonatInEuro__c.field-meta.xml
<CustomField>
    <fullName>VerwaltungProMonatInEuro__c</fullName>
    <label>Verwaltung pro Monat in Eur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>