force-app/main/default/objects/FinanzierungsanfrageApartment__c/fields/WertGrundstueckInEuro__c.field-meta.xml
<CustomField>
    <fullName>WertGrundstueckInEuro__c</fullName>
    <label>Wert Grundstück in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>